# VibeMouse

./: pyproject.toml
tests/: test_config.py  test_doctor.py  test_mouse_listener.py
vibemouse/: doctor.py  mouse_listener.py  transcriber.py
